fix navbar expand/collapse issue

--- a/ESDWiki2/ClientApp/src/app/navbar/top-navbar.styles.css
+++ b/ESDWiki2/ClientApp/src/app/navbar/top-navbar.styles.css
@@ -82,6 +82,7 @@
 
 .login-out-button {
   border: 1px solid white;
+  width: 76.78px;
   border-radius: 4px;
   height: 30px;
 }
